Corrected JRE requirement to 1.5

--- a/examples/org.eclipse.e4.ui.examples.css.rcp/styles/stylesheet.css
+++ b/examples/org.eclipse.e4.ui.examples.css.rcp/styles/stylesheet.css
@@ -22,26 +22,17 @@ Tree {
 	background-color: #f8f8f8;
 }
 
-.banner {
+.messageBanner {
     background-color: #f0f0f0;
 }
 
-.title {
+.messageBannerTitle {
     font-weight: bold;
     background-color: #f0f0f0;
 }
 
-#messageSubject {
+.messageBannerContent {
     background-color: #f0f0f0;
-}
-
-#messageSender {
-    background-color: #f0f0f0;
-}
-
-#messageDate {
-    background-color: #f0f0f0;
-}
 
 .messageDateUnRead {
     font-style: italic;
