--- a/examples/org.eclipse.e4.ui.examples.css.rcp/styles/stylesheet.css
+++ b/examples/org.eclipse.e4.ui.examples.css.rcp/styles/stylesheet.css
@@ -1,10 +1,10 @@
-Shell, SashForm {
-	font-family: "Terminal";
+Shell {
+	font-family: "Times New Roman"
 	font-size: 12;
 }
 
 ToolBar, Button {
-	font-family: "Terminal";
+	font-family: "Times New Roman";
 	font-size: 9;
 }
 
