Fixes bug 263740 - [CSS] Gallery background not matching CSS

--- a/examples/org.eclipse.e4.demo.e4photo/css/e4photo.css
+++ b/examples/org.eclipse.e4.demo.e4photo/css/e4photo.css
@@ -25,13 +25,17 @@ CTabFolder.active:selected {
 	background-color: #f4f4f4;
 }
 
-CTabFolder Gallery GalleryItem {
+CTabFolder {
 	background-color: #f4f4f4;
 }
 
 #preview {
 	color: #e5e5e5;
 	background-color: #ffffff;
+}
+
+Gallery {
+	background-color: #f4f4f4;
 }
 
 GalleryItem:selected {
