--- a/examples/org.eclipse.e4.ui.examples.css/styles/swt/Example.css
+++ b/examples/org.eclipse.e4.ui.examples.css/styles/swt/Example.css
@@ -15,3 +15,12 @@ Text {
 	font-size: 11;
 	background: url(./images/bluefade-full.gif);	
 }
+
+CTabFolder {
+    color: darkblue;
+    background-color: #C0C0DF;
+}
+CTabFolder:selected {
+    color: white;
+    background-color: #7070EF;
+}
