Bug 264121 - [CSS] Add CTabFolder to Example.css in ui.examples.css

--- a/examples/org.eclipse.e4.ui.examples.css/styles/swt/Example.css
+++ b/examples/org.eclipse.e4.ui.examples.css/styles/swt/Example.css
@@ -18,7 +18,7 @@ Text {
 
 CTabFolder {
     color: darkblue;
-    background-color: #C0C0DF;
+    background-color: #D0D0E0;
 }
 CTabFolder:selected {
     color: white;
