Fixes bug 265909 - [CSS] Photo demo CSS should use simple folder style

--- a/examples/org.eclipse.e4.demo.e4photo/css/e4photo.css
+++ b/examples/org.eclipse.e4.demo.e4photo/css/e4photo.css
@@ -3,6 +3,7 @@ CTabFolder {
 	color: #666666;
 	background-color: #ffffff;
 	font: normal;
+	simple: true;
 }
 
 CTabFolder:selected {
@@ -22,10 +23,6 @@ CTabFolder.active:selected {
 }
 
 #library {
-	background-color: #f4f4f4;
-}
-
-CTabFolder {
 	background-color: #f4f4f4;
 }
 
