bug 267470 [Navigator] Deprecate the ResourceNavigator

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/navigator/package.html
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/navigator/package.html
@@ -9,6 +9,7 @@
 <body>
 Provides the standard Resource Navigator view which
 presents the tree of resources in the workspace.
-<br>&nbsp;
+<br>
+This package is deprecated as of release 3.5, use the Common Navigator Framework instead.
 </body>
 </html>
