--- a/org.eclipse.ui.intro.universal/themes/slate/html/webresources.css
+++ b/org.eclipse.ui.intro.universal/themes/slate/html/webresources.css
@@ -18,10 +18,15 @@
 
 /* show the "selected" image for this page */
 #navigation-links a#webresources img {
-	background-image : url(../graphics/icons/ctool/webresources-select.gif); 
+	background-image : url(../graphics/icons/ctool/webresources-select.png); 
 	width : 64px;
 	height: 64px;
 	margin-top : 12px
+}
+
+/* Hack for IE6, which cannot display png files with alpha channel transparency */
+* html #navigation-links a#webresources img {
+	background-image : url(../graphics/icons/ctool/webresources-select.gif); 
 }
 
 #navigation-links a#.high-contrast#webresources img {
