--- a/org.eclipse.ui.intro.universal/themes/slate/html/root.css
+++ b/org.eclipse.ui.intro.universal/themes/slate/html/root.css
@@ -28,10 +28,10 @@ a .link-extra-div {
 }
 
 #page-links a {
-    width : 40%;
+    width : 45%;
     float : left;
-    margin-left : 7%; 
-	margin-top : 40px;
+    margin-left : 3%; 
+	margin-bottom : 35px;
 }
 
 /*
@@ -64,6 +64,7 @@ html, body {
 .intro-header {
     padding-top : 90px;
     margin-left : 7%;
+    margin-bottom : 40px;
 }
 
 /* For the main page content's title */
@@ -80,14 +81,30 @@ html, body {
 	vertical-align : middle;
 }
 
-/* Hide the text in the normal state */
-#page-links a .text {
-	display : none;
+#page-links a span {
+	display : block;
 }
 
 #page-links a span.link-label {
-    display : inline; 
-    vertical-align : middle;
+	position : relative;
+	top : -45px;
+	left : 60px;
+	margin-right: 60px;
+	font-family: Verdana, Arial, Helvetica; 
+	font-weight: bold; 
+	line-height:1.5;
+	color: #00507C;
+}
+
+#page-links a p .text {
+    left: 51px; 
+	display : block;
+	position : relative;
+	top : -40px;
+	margin-bottom: -25px;
+	margin-right: 53px;
+	font-family: Verdana, Arial, Helvetica; 
+	line-height: 1.3;
 }
 
 #page-links a .background-image {
