--- a/org.eclipse.ui.intro.universal/themes/slate/html/root.css
+++ b/org.eclipse.ui.intro.universal/themes/slate/html/root.css
@@ -120,45 +120,88 @@ html, body {
 }
 
 /* Link images */
-#page-links a#overview .content-img { background-image : url("../graphics/rootpage/overview48.gif"); }
+#page-links a#overview .content-img { background-image : url("../graphics/rootpage/overview48.png"); }
 #page-links a#overview:hover .content-img,
 #page-links a#overview:active .content-img,
-#page-links a#overview:focus .content-img { background-image : url("../graphics/rootpage/overview48_hov.gif"); }
+#page-links a#overview:focus .content-img { background-image : url("../graphics/rootpage/overview48_hov.png"); }
 
-#page-links a#tutorials .content-img { background-image : url("../graphics/rootpage/tutorials48.gif"); }
+#page-links a#tutorials .content-img { background-image : url("../graphics/rootpage/tutorials48.png"); }
 #page-links a#tutorials:hover .content-img,
 #page-links a#tutorials:active .content-img,
-#page-links a#tutorials:focus .content-img { background-image : url("../graphics/rootpage/tutorials48_hov.gif"); }
+#page-links a#tutorials:focus .content-img { background-image : url("../graphics/rootpage/tutorials48_hov.png"); }
 
-#page-links a#samples .content-img { background-image : url("../graphics/rootpage/samples48.gif"); }
+#page-links a#samples .content-img { background-image : url("../graphics/rootpage/samples48.png"); }
 #page-links a#samples:hover .content-img,
 #page-links a#samples:active .content-img,
-#page-links a#samples:focus .content-img { background-image : url("../graphics/rootpage/samples48_hov.gif"); }
+#page-links a#samples:focus .content-img { background-image : url("../graphics/rootpage/samples48_hov.png"); }
 
-#page-links a#whatsnew .content-img { background-image : url("../graphics/rootpage/whatsnew48.gif"); }
+#page-links a#whatsnew .content-img { background-image : url("../graphics/rootpage/whatsnew48.png"); }
 #page-links a#whatsnew:hover .content-img,
 #page-links a#whatsnew:active .content-img,
-#page-links a#whatsnew:focus .content-img { background-image : url("../graphics/rootpage/whatsnew48_hov.gif"); }
+#page-links a#whatsnew:focus .content-img { background-image : url("../graphics/rootpage/whatsnew48_hov.png"); }
 
-#page-links a#firststeps .content-img { background-image : url("../graphics/rootpage/firststeps48.gif"); }
+#page-links a#firststeps .content-img { background-image : url("../graphics/rootpage/firststeps48.png"); }
 #page-links a#firststeps:hover .content-img,
 #page-links a#firststeps:active .content-img,
-#page-links a#firststeps:focus .content-img { background-image : url("../graphics/rootpage/firststeps48_hov.gif"); }
+#page-links a#firststeps:focus .content-img { background-image : url("../graphics/rootpage/firststeps48_hov.png"); }
 
-#page-links a#migrate .content-img { background-image : url("../graphics/rootpage/migrate48.gif"); }
+#page-links a#migrate .content-img { background-image : url("../graphics/rootpage/migrate48.png"); }
 #page-links a#migrate:hover .content-img,
 #page-links a#migrate:active .content-img,
-#page-links a#migrate:focus .content-img { background-image : url("../graphics/rootpage/migrate48_hov.gif"); }
+#page-links a#migrate:focus .content-img { background-image : url("../graphics/rootpage/migrate48_hov.png"); }
 
-#page-links a#webresources .content-img { background-image : url("../graphics/rootpage/webresources48.gif"); }
+#page-links a#webresources .content-img { background-image : url("../graphics/rootpage/webresources48.png"); }
 #page-links a#webresources:hover .content-img,
 #page-links a#webresources:active .content-img,
-#page-links a#webresources:focus .content-img { background-image : url("../graphics/rootpage/webresources48_hov.gif"); }
+#page-links a#webresources:focus .content-img { background-image : url("../graphics/rootpage/webresources48_hov.png"); }
 
-#page-links a#workbench .content-img { background-image : url("../graphics/rootpage/workbench48.gif"); }
+#page-links a#workbench .content-img { background-image : url("../graphics/rootpage/workbench48.png"); }
 #page-links a#workbench:hover .content-img,
 #page-links a#workbench:active .content-img,
-#page-links a#workbench:focus .content-img { background-image : url("../graphics/rootpage/workbench48_hov.gif"); }
+#page-links a#workbench:focus .content-img { background-image : url("../graphics/rootpage/workbench48_hov.png"); }
+
+/* Hack for IE6, which cannot display png files with alpha channel transparency */
+
+* html #page-links a#overview .content-img { background-image : url("../graphics/rootpage/overview48.gif"); }
+* html #page-links a#overview:hover .content-img,
+* html #page-links a#overview:active .content-img,
+* html #page-links a#overview:focus .content-img { background-image : url("../graphics/rootpage/overview48_hov.gif"); }
+
+* html #page-links a#tutorials .content-img { background-image : url("../graphics/rootpage/tutorials48.gif"); }
+* html #page-links a#tutorials:hover .content-img,
+* html #page-links a#tutorials:active .content-img,
+* html #page-links a#tutorials:focus .content-img { background-image : url("../graphics/rootpage/tutorials48_hov.gif"); }
+
+* html #page-links a#samples .content-img { background-image : url("../graphics/rootpage/samples48.gif"); }
+* html #page-links a#samples:hover .content-img,
+* html #page-links a#samples:active .content-img,
+* html #page-links a#samples:focus .content-img { background-image : url("../graphics/rootpage/samples48_hov.gif"); }
+
+* html #page-links a#whatsnew .content-img { background-image : url("../graphics/rootpage/whatsnew48.gif"); }
+* html #page-links a#whatsnew:hover .content-img,
+* html #page-links a#whatsnew:active .content-img,
+* html #page-links a#whatsnew:focus .content-img { background-image : url("../graphics/rootpage/whatsnew48_hov.gif"); }
+
+* html #page-links a#firststeps .content-img { background-image : url("../graphics/rootpage/firststeps48.gif"); }
+* html #page-links a#firststeps:hover .content-img,
+* html #page-links a#firststeps:active .content-img,
+* html #page-links a#firststeps:focus .content-img { background-image : url("../graphics/rootpage/firststeps48_hov.gif"); }
+
+* html #page-links a#migrate .content-img { background-image : url("../graphics/rootpage/migrate48.gif"); }
+* html #page-links a#migrate:hover .content-img,
+* html #page-links a#migrate:active .content-img,
+* html #page-links a#migrate:focus .content-img { background-image : url("../graphics/rootpage/migrate48_hov.gif"); }
+
+* html #page-links a#webresources .content-img { background-image : url("../graphics/rootpage/webresources48.gif"); }
+* html #page-links a#webresources:hover .content-img,
+* html #page-links a#webresources:active .content-img,
+* html #page-links a#webresources:focus .content-img { background-image : url("../graphics/rootpage/webresources48_hov.gif"); }
+
+* html #page-links a#workbench .content-img { background-image : url("../graphics/rootpage/workbench48.gif"); }
+* html #page-links a#workbench:hover .content-img,
+* html #page-links a#workbench:active .content-img,
+* html #page-links a#workbench:focus .content-img { background-image : url("../graphics/rootpage/workbench48_hov.gif"); }
+/* End hack for IE6 */
 
 /*
  * Not using action links.
