better bright theme

--- a/examples/org.eclipse.e4.demo.contacts/css/bright-gradient.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/bright-gradient.css
@@ -57,7 +57,7 @@ Table,Text#output {
 }
 
 ToolBar {
-	background-color: #ffffff #cccccc #dddddd 50% 50%;
+	background-color: white #dddddd #eeeeee 35% 25% 25%;
 	color: white;
 	font: Verdana 8px;
 }
