--- a/examples/org.eclipse.e4.demo.e4photo/css/e4photo.css
+++ b/examples/org.eclipse.e4.demo.e4photo/css/e4photo.css
@@ -4,6 +4,7 @@ CTabFolder {
 	background-color: #ffffff;
 	font: normal;
 	simple: true;
+	margin: 5;
 }
 
 CTabFolder:selected {
@@ -72,6 +73,6 @@ Tree {
 	color: #666666;
 }
 
-Composite Shell {
+Composite, Shell {
 	background-color: #ffffff;
 }
