--- a/examples/org.eclipse.e4.demo.contacts/css/bright-gradient.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/bright-gradient.css
@@ -51,19 +51,19 @@ ToolBar {
 	font: Verdana 8px;
 }
 
-CTabFolder {
+ETabFolder {
 	color: black;
 	font: Verdana 8px;
 	simple: true;
 }
 
-CTabFolder:selected {
+ETabFolder:selected {
 	background-color: #cccccc #e8e8e8 60%;
 	font-weight: normal;
 	font: Verdana 8px;
 }
 
-CTabFolder.active:selected {
+ETabFolder.active:selected {
 	background-color: #ffffff #cccccc #dddddd 50% 50%;
 	color: #1d659f;
 	font: bold;
