--- a/examples/org.eclipse.e4.demo.contacts/css/dark-gradient.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/dark-gradient.css
@@ -52,17 +52,20 @@ ToolBar {
 }
 
 ETabFolder {
-	color: rgb(150, 150, 150);
-	font: Verdana 8px;
 	simple: true;
 }
 
-ETabFolder:selected {
+ETabItem {
+	color: rgb(150, 150, 150);
+	font: Verdana 8px;
+}
+
+ETabItem:selected {
 	background-color: #4a4a4a #101010 60%;
 	font: Verdana 8px;
 }
 
-ETabFolder.active:selected {
+ETabItem.active:selected {
 	background-color: #777777 #373737 #101010 50% 50%;
 	color: #f08d00;
 }
