DetailsView is now styled using the id of the part rather than setting the property manually

--- a/examples/org.eclipse.e4.demo.contacts/css/dark-gradient.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/dark-gradient.css
@@ -35,7 +35,7 @@ SashForm {
 	background-color: rgb(48, 48, 48);
 }
 
-#DetailView {
+#DetailsView {
 	background-color: gradient radial #575757 #101010 60%;
 }
 
