Bug 284037 [CSS] Photo demo should not override font: for tab states

--- a/examples/org.eclipse.e4.demo.e4photo/css/e4photo.css
+++ b/examples/org.eclipse.e4.demo.e4photo/css/e4photo.css
@@ -10,18 +10,16 @@ ETabItem {
 }
 ETabItem:selected {
 	background-color: #f4f4f4;
-	font: normal;
 }
 
 ETabItem.active {
 	background-color: #ffffff;
-	font: normal;
 }
 
 ETabItem.active:selected {
 	color: #ff5500;
 	background-color: #f4f4f4;
-	font: bold;
+	font-weight: bold;
 }
 
 #library {
