Bug 294391 Design the e4 Java client API for handling part dirty state and saveable life cycle

--- a/examples/org.eclipse.e4.demo.contacts/css/dark-gradient.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/dark-gradient.css
@@ -69,3 +69,7 @@ ETabItem.active:selected {
 	background-color: #777777 #373737 #101010 50% 50%;
 	color: #f08d00;
 }
+
+Shell {
+    background-color: gradient radial #575757 #101010 60%;
+}
