--- a/org.eclipse.help.webapp/advanced/indexView.css
+++ b/org.eclipse.help.webapp/advanced/indexView.css
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2006 Intel Corporation and others.
+ * Copyright (c) 2005, 2009 Intel Corporation and others.
  * All rights reserved. This program and the accompanying materials 
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
  * Contributors:
  *     Intel Corporation - initial API and implementation
  *     IBM Corporation 2006, refactored index view into a single frame
+ *     IBM Corporation 2009, added style for .see
  *******************************************************************************/
 
 BODY {
@@ -171,6 +172,11 @@ A.active{
 
 A.active:hover{
 	text-decoration:underline; 
+}
+
+A.see {
+    font-style : italic;
+    color : #0000FF;
 }
 
 <%
