--- a/org.eclipse.ui.intro.universal/themes/slate/html/root.css
+++ b/org.eclipse.ui.intro.universal/themes/slate/html/root.css
@@ -49,6 +49,7 @@ html, body {
 #root {
     background-image : url("../graphics/rootpage/root_banner.jpg");
 	background-position : top left;
+	background-repeat : repeat-x;
 }
 
 #branding {
