--- a/examples/org.eclipse.e4.demo.contacts/css/bright-gradient.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/bright-gradient.css
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009 Siemens AG and others.
+ * Copyright (c) 2009, 2010 Siemens AG and others.
  * 
  * All rights reserved. This program and the accompanying materials 
  * are made available under the terms of the Eclipse Public License v1.0
@@ -55,18 +55,18 @@ ETabFolder {
 	simple: true;
 }
 
-ETabItem {
+CTabItem {
 	color: black;
 	font: Verdana 8px;
 }
 
-ETabItem:selected {
+CTabItem:selected {
 	background-color: #cccccc #e8e8e8 60%;
 	font-weight: normal;
 	font: Verdana 8px;
 }
 
-ETabItem.active:selected {
+CTabItem.active:selected {
 	background-color: #ffffff #cccccc #dddddd 50% 50%;
 	color: #1d659f;
 	font: bold;
