--- a/examples/org.eclipse.e4.demo.contacts/css/dark-gradient.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/dark-gradient.css
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009 Siemens AG and others.
+ * Copyright (c) 2009, 2010 Siemens AG and others.
  * 
  * All rights reserved. This program and the accompanying materials 
  * are made available under the terms of the Eclipse Public License v1.0
@@ -51,21 +51,21 @@ ToolBar {
 	font: Verdana 8px;
 }
 
-ETabFolder {
+CTabFolder {
 	simple: true;
 }
 
-ETabItem {
+CTabItem {
 	color: rgb(150, 150, 150);
 	font: Verdana 8px;
 }
 
-ETabItem:selected {
+CTabItem:selected {
 	background-color: #4a4a4a #101010 60%;
 	font: Verdana 8px;
 }
 
-ETabItem.active:selected {
+CTabItem.active:selected {
 	background-color: #777777 #373737 #101010 50% 50%;
 	color: #f08d00;
 }
