--- a/examples/org.eclipse.e4.demo.contacts/css/dark.css
+++ b/examples/org.eclipse.e4.demo.contacts/css/dark.css
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009 Siemens AG and others.
+ * Copyright (c) 2009, 2010 Siemens AG and others.
  * 
  * All rights reserved. This program and the accompanying materials 
  * are made available under the terms of the Eclipse Public License v1.0
@@ -78,23 +78,23 @@ ToolBar {
     font: Verdana 8px;
 }
 
-ETabFolder {
+CTabFolder {
     simple: true;
 }
 
-ETabItem:selected {
+CTabItem:selected {
     background-color: rgb(48,48,48);
     font-weight: normal;
     font: Verdana 8px;
 }
 
-ETabItem {
+CTabItem {
     color: rgb(150,150,150);
     background-color: rgb(48,48,48);
     font: Verdana 8px;
 }
 
-ETabItem.active:selected {
+CTabItem.active:selected {
 	color: #ff5500;
 	font: bold;
 }
